Finished further study with AJAX

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,5 +19,7 @@
     {% block body %}{% endblock %}
 
     {% block after_body %}{% endblock %}
+    <a href="/">Return Home</a>
+    <a href="/logout">Log out</a>
   </body>
 </html>
