--- a/templates/movie_details.html
+++ b/templates/movie_details.html
@@ -11,7 +11,7 @@
 
 <img src="{{ movie.poster_path }}">
 
-<form action="/rating" method="POST">
+<form action="/movies/{{movie.movie_id}}/ratings" method="POST">
     What do you rate this film?<input type="text" name="rating">
     <input type="hidden" id="movie_id" name="movie_id" value="{{ movie.movie_id }}">
     <input type="submit">
